@@ -181,6 +181,7 @@
   	  char cart_agency[65];                /* Agency */
   	  char cart_publisher[65];             /* Publisher */
   	  char cart_composer[65];              /* Composer */
+  	  char cart_conductor[65];             /* Conductor */
   	  char cart_user_defined[256];         /* User Defined */
   	  int  cart_usage_code;                /* Usage Code */
   	  int cart_forced_length;              /* Forced Length */
@@ -223,6 +224,8 @@
       The cart_publisher is 64 characters.
 
       The cart_composer is 64 characters.
+
+      The cart_conductor is 64 characters.
 
       The cart_user_defined is 255 characters.
       
